manual_procedure/UAT_2024.12/metadata/objects/Individual/fields/HasOptedOut3rdParty__c.field-meta.xml
<CustomField>
    <fullName>HasOptedOut3rdParty__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of P&amp;P Consensi Drop1</description>
    <label>Don&apos;t 3rd Party</label>
    <type>Checkbox</type>
</CustomField>