manual_procedure/UAT_2024.12/metadata/objects/Individual/fields/HasOptedOutAdSmart__c.field-meta.xml
<CustomField>
    <fullName>HasOptedOutAdSmart__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of P&amp;P Consensi Drop1</description>
    <label>Don&apos;t AdSmart</label>
    <type>Checkbox</type>
</CustomField>